--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ permalink: /
 
     <h3>Upcoming and current courses </h3>
 
-    <a href="{{ site.baseurl }}/courses">Schedule of upcoming and current
+    <a href="{{ site.url }}/courses">Schedule of upcoming and current
       courses</a>
   </div>
 </div>
@@ -54,7 +54,7 @@ permalink: /
 
     <h3>Available courses </h3>
 
-    <a href="{{ site.baseurl }}/courses">Schedule of available courses</a>
+    <a href="{{ site.url }}/courses">Schedule of available courses</a>
 
   </div>
 </div>
@@ -76,6 +76,6 @@ permalink: /
     <p>
     <h3>Tools and resources </h3>
     </p>
-    <a href="{{ site.baseurl }}/resources">List of relevant tools</a>
+    <a href="{{ site.url }}/resources">List of relevant tools</a>
   </div>
 </div>
