--- a/past_courses_training.html
+++ b/past_courses_training.html
@@ -24,7 +24,7 @@ permalink: /courses/past-courses/
               {% for post in site.posts %}
               {% if post.categories contains "past-course" %}
               <li class="list-unstyled">
-                <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+                <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                 <p>{{post.course_overview}}</p>
 
 
