--- a/upcoming-courses.html
+++ b/upcoming-courses.html
@@ -18,7 +18,7 @@ permalink: /courses/upcoming-courses/
       {% for post in site.posts %}
       {% if post.categories contains "upcoming" %}
       <li class="list-unstyled">
-        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
         <p>{{post.course_overview}}</p><small class="text-muted">posted: {{post.date
           | date_to_string}} </small>
 
