updated baseurl on config.yml plus templates with site.url

--- a/available-courses.html
+++ b/available-courses.html
@@ -17,7 +17,7 @@ permalink: /courses/available-courses/
       {% for post in site.posts %}
       {% if post.categories contains "available" %}
       <li class="list-unstyled">
-        <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
         <p></p><small class="text-muted">posted: {{post.date
           | date_to_string}} </small>
 
