--- a/courses.html
+++ b/courses.html
@@ -52,7 +52,7 @@ permalink: /courses/
     {% for post in site.posts %}
     {% if post.categories contains "available" %}
     <li class="list-unstyled">
-      <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a> <small class="text-muted">posted: {{
+      <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> <small class="text-muted">posted: {{
         post.date
         |
         date_to_string}} </small>
