updated index,past_courses_training and Bioinformatics application

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ permalink: /
 <div class="row">
   <div class="col-sm-12">
     <p>
-    <h3>Pathogen Genomics and Epidemiology Training Survey </h3>
+    <h3>Pathogen genomics and epidemiology training survey </h3>
     </p>
     <p>A landscaping exercise is being carried out to identify existing training courses and materials relevant to
       Pathogen Genomics and Epidemiology. Information about courses and training materials are being collated into
