--- a/past_courses_training.html
+++ b/past_courses_training.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Past Courses and Training Events
+title: Past courses and training events
 permalink: /courses/past-courses/
 
 ---
