--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@ permalink: /resources/
 <div class="row">
   <div class="col-sm-12">
     <p>
-    <h3>Pathogen Genomics </h3>
+    <h3>Pathogen genomics </h3>
     </p>
   </div>
 </div>
