numbered pha4ge list working groups

--- a/resources.html
+++ b/resources.html
@@ -26,12 +26,12 @@ permalink: /resources/
     <div class="row">
       <div class="col-sm-6">
         <ol>
-          <li><a href="https://pha4ge.org/data-structures/" target="_blank">Data structures</a></li>
-          <li><a href="https://pha4ge.org/infrastructure/" target="_blank">Infrastructure</a></li>
-          <li><a href="https://pha4ge.org/bioinformatics-pipelines-and-visualization/" target="_blank">Bioinformatics
+          <li>1. <a href="https://pha4ge.org/data-structures/" target="_blank">Data structures</a></li>
+          <li>2. <a href="https://pha4ge.org/infrastructure/" target="_blank">Infrastructure</a></li>
+          <li>3.<a href="https://pha4ge.org/bioinformatics-pipelines-and-visualization/" target="_blank">Bioinformatics
               pipelines and visualization</a></li>
           <li>
-            <a href="hthttps://pha4ge.org/public-sequence-repositories/" target="_blank">Public sequence
+            4. <a href="hthttps://pha4ge.org/public-sequence-repositories/" target="_blank">Public sequence
               repositories</a>
           </li>
 
@@ -39,16 +39,16 @@ permalink: /resources/
       </div>
       <div class="col-sm-6">
         <ol>
-          <li><a href="https://pha4ge.org/reference-qc-and-validation/" target="_blank">Reference qulaity control and
+          <li>5. <a href="https://pha4ge.org/reference-qc-and-validation/" target="_blank">Reference qulaity control and
               validation</a></li>
-          <li><a href="https://pha4ge.org/training-and-workforce-development/" target="_blank">Training and workforce
+          <li>6. <a href="https://pha4ge.org/training-and-workforce-development/" target="_blank">Training and workforce
               development</a></li>
 
 
-          <li><a href="https://pha4ge.org/users-and-applications/" target="_blank">Users and applications</a>
+          <li>7. <a href="https://pha4ge.org/users-and-applications/" target="_blank">Users and applications</a>
           </li>
 
-          <li><a href="https://pha4ge.org/ethics-and-data-sharing/" target="_blank">Ethics and data sharing</a>
+          <li>8. <a href="https://pha4ge.org/ethics-and-data-sharing/" target="_blank">Ethics and data sharing</a>
           </li>
         </ol>
       </div>
