added one publication

--- a/publications.html
+++ b/publications.html
@@ -20,6 +20,17 @@ permalink: /resources/publications/
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
           <div class="panel-body">
+
+            <p>
+              Marie-Claude Blatter, Philippe Le Mercier & Teresa K. Attwood, <b>(2021) </b> <a style="color:black;"
+                href="https://doi.org/10.7490/f1000research.1118746.1" target="_blank">
+
+                Using bioinformatics to hunt SARS-CoV-2, its variants & its origins – a practical guide
+
+              </a>
+              <i>F1000 Research Limited 10 (836): 836 doi: 10.7490/f1000research.1118746.1</i>
+            </p>
+
             <p>
               Emma B. Hodcroft, Nicola De Maio, Rob Lanfear, <b>Duncan R. MacCannell</b>, Bui Quang Minh, Heiko A.
               Schmidt, Alexandros Stamatakis, Nick Goldman & Christophe Dessimoz <b>(2021) </b> <a style="color:black;"
@@ -27,7 +38,7 @@ permalink: /resources/publications/
                 target="_blank">Want to
                 track pandemic variants faster? Fix the bioinformatics bottleneck.
               </a>
-              <i>Nature Publishing Group</i>
+              <i>Nature Publishing Group </i>
             </p>
             <p>
               Andres G. Lescano, Gabriela Salmon-Mulanovich, Elena Pedroni & <b>David L. Blazes </b><b>(2007) </b>
