removed a comma on the latest publication

--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@ permalink: /resources/publications/
           <div class="panel-body">
 
             <p>
-              Marie-Claude Blatter, Philippe Le Mercier & Teresa K. Attwood, <b>(2021) </b> <a style="color:black;"
+              Marie-Claude Blatter, Philippe Le Mercier & Teresa K. Attwood <b>(2021) </b> <a style="color:black;"
                 href="https://doi.org/10.7490/f1000research.1118746.1" target="_blank">
 
                 Using bioinformatics to hunt SARS-CoV-2, its variants & its origins – a practical guide
