updated upcoming, courses and available courses pages

--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@ permalink: /about/
       (NGS) for pathogen surveillance and response. Several nodes are being established across Africa under this
       initiative which will need to receive training on all aspects of NGS implementation.</p>
   </div>
-  <div class="col-sm-2"><img alt="..." src="/ngs-academy/img/dna_double_strand.png" />
+  <div class="col-sm-2"><img alt="..." src="{{ site.baseurl }}img/dna_double_strand.png" />
     <p class="small"> Source: CBIO UCT</p>
   </div>
 
