--- a/courses.html
+++ b/courses.html
@@ -37,8 +37,8 @@ permalink: /courses/
     {% if post.categories contains "upcoming" %}
     <li class="list-unstyled">
       <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-      <p>{{post.course_overview}}</p><small class="text-muted">posted: {{post.date
-        | date_to_string}} </small>
+      <p>{{post.course_overview}} <small class="text-muted">posted: {{post.date
+          | date_to_string}} </small></p>
 
 
     </li>
