--- a/available-courses.html
+++ b/available-courses.html
@@ -18,7 +18,7 @@ permalink: /courses/available-courses/
       {% if post.categories contains "available" %}
       <li class="list-unstyled">
         <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-        <p></p><small class="text-muted">posted: {{post.date
+        <small class="text-muted">posted: {{post.date
           | date_to_string}} </small>
 
 
