added new timetable

--- a/courses_other.html
+++ b/courses_other.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Survey results
-permalink: /resources/survey/
+title: Other pathogen surveillance courses
+permalink: /courses/other-courses/
 ---
 
 
