updated one column name

--- a/courses_other.html
+++ b/courses_other.html
@@ -18,7 +18,7 @@ permalink: /courses/other-courses/
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
-                    <th>Organisation name</th>
+                    <th>Organisation</th>
                     <th>Course title</th>
                     <th>Location</th>
                     <th>Context course developed and presented</th>
