tweaked column names

--- a/courses_other.html
+++ b/courses_other.html
@@ -23,8 +23,8 @@ permalink: /courses/other-courses/
                     <th>Location</th>
                     <th>Context </th>
                     <th>Appropriate for use in a public health setting</th>
-                    <th>Target audience</th>
-                    <th>Specific to pathogen</th>
+                    <th>Audience</th>
+                    <th>Pathogen</th>
                 </tr>
             </thead>
             <tbody id="myTable">
