updated column names

--- a/courses_other.html
+++ b/courses_other.html
@@ -22,9 +22,9 @@ permalink: /courses/other-courses/
                     <th>Title</th>
                     <th>Location</th>
                     <th>Context </th>
-                    <th>Appropriate for use in a public health setting</th>
-                    <th>Target audience</th>
-                    <th>Specific to pathogen</th>
+                    <th>Public health</th>
+                    <th>Audience</th>
+                    <th>Pathogen</th>
                 </tr>
             </thead>
             <tbody id="myTable">
@@ -592,4 +592,6 @@ permalink: /courses/other-courses/
             });
         });
     });
+
+
 </script>
