updated column names

--- a/courses_other.html
+++ b/courses_other.html
@@ -22,7 +22,7 @@ permalink: /courses/other-courses/
                     <th>Title</th>
                     <th>Location</th>
                     <th>Context </th>
-                    <th>Appropriate for use in a public health setting</th>
+                    <th>Public health</th>
                     <th>Audience</th>
                     <th>Pathogen</th>
                 </tr>
