added table sort

--- a/courses_other.html
+++ b/courses_other.html
@@ -7,15 +7,16 @@ permalink: /courses/other-courses/
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+<script src="js/tablesort.js"></script>
 
 
 <div class="row">
+
     <div class="col-sm-12">
 
         <input class="form-control" id="myInput" type="text" placeholder="Search..">
         <br>
-        <table class="table table-bordered table-striped">
+        <table class="table table-sortable table-bordered table-striped">
             <thead>
                 <tr>
                     <th>Organisation</th>
@@ -575,6 +576,8 @@ permalink: /courses/other-courses/
 
             </tbody>
         </table>
+        <script src="js/tablesort.js"></script>
+
     </div>
 
 
