updated table 05 jul 2021

--- a/courses_other.html
+++ b/courses_other.html
@@ -89,7 +89,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/systems-biology-from-large-datasets-to-biological-insight-virtual-20210621/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/working-with-protozoan-parasite-database-resources-montevideo-uruguay-20191110/"
                                         target="_blank">Working with Protozoan Parasite Database</a></li>
                             </td>
                             <td>Beginner</td>
@@ -170,7 +170,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/our-events/overseas-courses/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/malaria-experimental-genetics-2017-accra-ghana-2017/"
                                         target="_blank">Malaria Experimental Genetics</a></li>
                             </td>
                             <td>Beginner</td>
@@ -187,7 +187,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/our-events/overseas-courses/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/bacterial-genomes-antimicrobial-resistance-in-bacterial-pathogens-20210322/"
                                         target="_blank">Antimicrobial Resistance in Bacterial Pathogens</a></li>
                             </td>
                             <td>Beginner</td>
@@ -218,7 +218,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/our-events/overseas-courses/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/next-generation-sequencing-bioinformatics-chile-2019/"
                                         target="_blank">Next Generation Sequencing Bioinformatics</a></li>
                             </td>
                             <td>Beginner</td>
@@ -233,7 +233,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/our-events/overseas-courses/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/viral-bioinformatics-genomics-uruguay-2021/"
                                         target="_blank">Viral Genomics and Bioinformatics</a></li>
                             </td>
                             <td>Beginner</td>
@@ -249,7 +249,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/our-events/overseas-courses/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/molecular-approaches-to-clinical-microbiology-in-africa-nairobi-kenya-20180908/"
                                         target="_blank">Molecular Approaches to Clinical Microbiology in Africa</a></li>
                             </td>
                             <td>Beginner</td>
@@ -266,7 +266,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Wellcome Connecting Science</td>
                             <td>
-                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/our-events/overseas-courses/"
+                                <li><a href="https://coursesandconferences.wellcomeconnectingscience.org/event/genomics-and-epidemiological-surveillance-of-bacterial-pathogens-2016-buenos-aires-argentina-2016/"
                                         target="_blank">Genomics and Epidemiological Surveillance of Bacterial
                                         Pathogens</a>
                                 </li>
@@ -380,7 +380,7 @@ permalink: /courses/other-courses/
 
 
                         <tr>
-                            <td>Kwame Nkrumah University of Science and Technology (KNUST)</td>
+                            <td>IsraelX</td>
                             <td>
                                 <li><a href="https://www.edx.org/course/essentials-of-genomics-and-biomedical-informatics"
                                         target="_blank">Essentials of Genomics and Biomedical Informatics</a>
@@ -398,7 +398,7 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Kwame Nkrumah University of Science and Technology (KNUST)</td>
+                            <td>University of Colorado </td>
                             <td>
                                 <li><a href="https://www.coursera.org/learn/genetic-epidemiology"
                                         target="_blank">Genetic
@@ -415,10 +415,9 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Kwame Nkrumah University of Science and Technology (KNUST)</td>
+                            <td>University of Virginia</td>
                             <td>
-                                <li><a href="https://www.coursera.org/learn/genetic-epidemiology"
-                                        target="_blank">Bacterial
+                                <li><a href="https://www.coursera.org/learn/informatics?" target="_blank">Bacterial
                                         Bioinformatics</a></li>
                                 </li>
                             </td>
@@ -435,7 +434,7 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Kwame Nkrumah University of Science and Technology (KNUST)</td>
+                            <td>Technical University of Denmark</td>
                             <td>
                                 <li><a href="https://www.coursera.org/learn/wgs-bacteria" target="_blank">Whole genome
                                         sequencing of bacterial genomes - tools and
@@ -455,7 +454,7 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Kwame Nkrumah University of Science and Technology (KNUST)</td>
+                            <td>Johns Hopkins University</td>
                             <td>
                                 <li><a href="https://www.youtube.com/playlist?list=PLWQWtO75LakmVZZRQKqGIMRyvEiCD-y2T"
                                         target="_blank">Metagenomics applied to surveillance of pathogens and
@@ -534,8 +533,8 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Centers for Disease Control and Prevention/ OAMD</td>
                             <td>
-                                <a href=" https://www.cdc.gov/amd and https://www.aphl.org/programs/infectious_disease/Pages/Advanced-Molecular-Detection.aspx"
-                                    target="_blank">AMD Academy Bioinformatics course</a>
+                                <a href="https://www.cdc.gov/amd/whats-new/amd-academy-2019.html" target="_blank">AMD
+                                    Academy Bioinformatics course</a>
 
 
                             </td>
@@ -564,9 +563,9 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>H3ABioNet</td>
+                            <td>NGS Academy for the Africa Pathogen Genomics Initiative</td>
                             <td>
-                                <li><a href=" https://www.h3abionet.org/categories/training/next-generation-sequencing-bioinformatics-course-2021"
+                                <li><a href="https://uct-cbio.github.io/ngs-academy/2021/NGS-SARS-CoV-2-past-course"
                                         target="_blank">Next Generation Sequencing Bioinformatics Training Course</a>
                                 </li>
 
@@ -587,7 +586,7 @@ permalink: /courses/other-courses/
                         <tr>
                             <td>Institut Pasteur de Tunis</td>
                             <td>
-                                <li><a href="https://www.h3abionet.org/categories/training/next-generation-sequencing-bioinformatics-course-2021"
+                                <li><a href="https://www.h3abionet.org/categories/training/"
                                         target="_blank">Introduction to NGS Technologies and their applications</a></li>
                                 </li>
                             </td>
